# GNL

./: CMakeLists.txt  Makefile  README.md  a.out  file.txt  get_next_line  get_next_line.c  get_next_line.h  main.c  test.c  test2.c
libft/: Makefile  a.out  ft_isalnum.c  ft_isdigit.c  ft_memccpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl.c  ft_putnbr.c  ft_putstr_fd.c  ft_strcat.c  ft_strdup.c  ft_strequ.c  ft_strmap.c  ft_strncat.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  libft.h  libft.h.gch
